--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,239 @@ engine: ejs
 current: index
 ---
 
-<h1>
-  這是一段話
-</h1>
+<!-- 輪播效果 -->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active carousel-item-height bg-cover"
+      style="background-image: url(https://images.unsplash.com/photo-1492683513054-55277abccd99?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=)">
+      <div class="carousel-caption d-none d-md-block px-3">
+        <h5>一個人，田野間的輕鬆美味</h5>
+        <p>城小中假上問，洲元化究變快歡專，臺正機上色從多空放我。來來中的來落行間我海府子成隨上事女，的石在朋經以定空他；級病期他，會性前集一於得當院應對分！意斯能己水成神錢。</p>
+      </div>
+    </div>
+    <div class="carousel-item carousel-item-height bg-cover"
+      style="background-image: url(https://images.unsplash.com/photo-1497668512640-fcbd959e5338?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=)">
+      <div class="carousel-caption d-none d-md-block px-3">
+        <h5>大口的放縱，毫無保留</h5>
+        <p>組道心深的起一強理重麼變喜才她起寶事運果引物；生一越。為己的治應的了：有的兩懷華場前間不不存力：性張得燈表年健交公言要認才部黨岸家深此一和國專女特希這密年那報。</p>
+      </div>
+    </div>
+    <div class="carousel-item carousel-item-height bg-cover"
+      style="background-image: url(https://images.unsplash.com/photo-1453831362806-3d5577f014a4?dpr=2&auto=format&fit=crop&w=1500&h=1016&q=80&cs=tinysrgb&crop=)">
+      <div class="carousel-caption d-none d-md-block px-3">
+        <h5>愛戀的赤裸裸辣辣</h5>
+        <p>件臺水則的看方府機英下英影加非！為走改幾少我住準愛地下。巴開上人在，但雜處權音生什有會能教！還話弟手大了。</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-<div class="box"></div>
+<!-- 內文介紹 -->
+<div class="bg-info text-white py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <i class="fas fa-utensils fa-4x mb-2"></i>
+        <h3>忘卻不了的莓果香</h3>
+        <p>沒有遺憾的愛過、支持過他們，在商言商，他們總是假設：喔，但相信我。可是已經晚了……請你以後不要在我面前說英文了。</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fas fa-coffee fa-4x mb-2"></i>
+        <h3>積沈在心中的漣漪</h3>
+        <p>但是當有機會時，但因為你是誠實且對此公平的，雪季可以延續4個月甚至5個月。摩挲著你的顏面，至少你不能完全抱怨荊棘，假如我在萬里外接到你的死耗，小馬，裝一個農夫，可以恣嘗鮮味。</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fas fa-birthday-cake fa-4x mb-2"></i>
+        <h3>放不下的體脂肪</h3>
+        <p>那就結婚吧我沒有妳會死，什麼都別說了，我什麼都不要，但我可以肯定地告訴你，前世的五百次回眸，沒有妳我的人生沒有意義。</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-light py-4 position-relative text-white">
+  <div class="row">
+    <div class="col-md-5 position-absolute bg-cover"
+      style="top:0; bottom:0; background-image: url(https://images.unsplash.com/photo-1481185103603-1dc844ef51db?dpr=2&auto=format&fit=crop&w=1080&h=718&q=80&cs=tinysrgb&crop=)">
+    </div>
+  </div>
+  <div class="container">
+    <div class="row justify-content-end text-md-dark">
+      <div class="col-md-7">
+        <h3>歡迎來到六角餐廳</h3>
+        <p>
+          遇到這些灰色道德地帶時，要到兩三年後才會比較有清楚的感受，而這正是為什麼西方公司會存活，作為一個年輕人，但是負責的人需要接受風險、喜歡冒險和願意負責。2，流感病毒攻心，春電展將開展，NBA明星周，低價電信資費戰，曼城主場連勝。
+        </p>
+        <a href="#" class="btn btn-outline-info">了解更多</a>
+        <div class="row mt-3">
+          <div class="col-md-6">
+            <h3>像含羞草似的嬌柔</h3>
+            <p>遍地烽火，台電影星空，Galaxy，鄧志偉揮巨炮，近兩年最大，國內油價連3漲，上學遇到洪七公。</p>
+          </div>
+          <div class="col-md-6">
+            <h3>老師可不可以補交</h3>
+            <p>歐洲和其他國家，現在世界已經變了，在這段感情中，讓情況越來越糟糕，台灣甚至更小、天然資源更少，身形高挑像是一個模特兒，只會讓事情更混亂，我依然盯著窗外圓山飯店的燈光。</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container py-5">
+  <h2 class="text-center py-4">如何這麼美味</h2>
+  <div class="row">
+    <div class="col-md-6 d-flex">
+      <i class="fas fa-fish fa-4x mr-4 text-info"></i>
+      <div class="text">
+        <h3>美艷的食材</h3>
+        <p>工作，那麼你至少得吃一對兒鯨魚……我身邊的朋友們啊，沒有錢，但又找不到出路．如果多吃魚可以補腦讓人變聰明的話，珍惜生活上帝還讓你活著，年老的時候，然後選中一張百元大鈔。</p>
+      </div>
+    </div>
+    <div class="col-md-6 d-flex">
+      <i class="fas fa-image fa-4x mr-4 text-info"></i>
+      <div class="text">
+        <h3>里隧道貫</h3>
+        <p>呂明賜帶中華隊，Mark，禽流感驚爆，勸進不斷，新恐龍化石研究"雷克斯暴龍的叔公"。生，生，樹不要皮，年輕的時候，.人怕出名豬怕壯，睡你的老公，.人怕出名豬怕壯，可是已經晚了……請你以後不要在我面前說英文了。
+        </p>
+      </div>
+    </div>
+    <div class="col-md-6 d-flex">
+      <i class="fas fa-leaf fa-4x mr-4 text-info"></i>
+      <div class="text">
+        <h3>是貝德花芬是槐格納</h3>
+        <p>再也不出聲不鬧：并且你有的是可驚的口味，不能怨，我見著的只你的遺像，就是你媽，他年紀雖則小，最有資格指證或相詮釋。</p>
+      </div>
+    </div>
+    <div class="col-md-6 d-flex">
+      <i class="fas fa-taxi fa-4x mr-4 text-info"></i>
+      <div class="text">
+        <h3>我跳出計程車跑向大直美麗華</h3>
+        <p>星巴克，他到了，而這正是為什麼西方公司會存活，而隨著你慢慢長大變老並開始面對這些困難的選擇時，根據你和這三個主要地區員工談話和面試的經驗。</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid position-relative text-white bg-light py-4">
+  <div class="row text-md-dark">
+    <div class="col-md-6 position-absolute bg-cover"
+      style="top: 0; bottom: 0; right: 0; background-image: url(https://images.unsplash.com/photo-1498309313100-e308c8946b45?dpr=2&auto=format&fit=crop&w=1500&h=2250&q=80&cs=tinysrgb&crop=)">
+    </div>
+    <div class="container">
+      <div class="col-md-6">
+        <h3>讓快樂持續發生</h3>
+        <p>在每個機會裡，但現在這些亞洲父母來了，懷疑自己是否重要，到底你自己的感覺是什麼。</p>
+        <dl class="row">
+          <dt class="col-sm-3">不吃飽哪有力氣減肥啊？</dt>
+          <dd class="col-sm-9">邊，是貝德花芬是槐格納你就愛，再也不出聲不鬧：并且你有的是可驚的口味，不能怨，我見著的只你。</dd>
+
+          <dt class="col-sm-3">愛你，愛你，我們真的羡慕</dt>
+          <dd class="col-sm-9">
+            錢立地就成富豪勢力家，他叩了不少下頭，和別的其餘的一日，是怎樣生竟不如其死？我，愛你，愛你，我們真的羡慕，我猜想，卻沒有同樣的碎痕，雪西裡與普陀山，沒福見著你的父親，想中止也不可能。
+          </dd>
+
+          <dt class="col-sm-3">我再來歐洲你已經早</dt>
+          <dd class="col-sm-9">這才覺著父性的愛像泉眼似的在性靈裏汩汩的流出：只可惜是遲了，講給我聽你得小提琴的故事：怎樣那晚上買琴來的時候你已經在你的小床上睡好。</dd>
+
+          <dt class="col-sm-3 text-truncate">假如你單是站著看還不滿意時</dt>
+          <dd class="col-sm-9">這時候想回頭已經太遲，只是這無恩的長路，還是有人成心種著的？</dd>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- 訂位資訊 -->
+<div class="container py-5">
+  <div class="row py-4">
+    <div class="col-md-6">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d115690.9053126962!2d121.32544828550766!3d25.022506291976324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa640ea9e1634555e!2z6aWX6aOf5aSp5aCCIOaWsOWMl-adv-api-W6lw!5e0!3m2!1szh-TW!2stw!4v1625047660274!5m2!1szh-TW!2stw"
+        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+    <div class="col-md-6">
+      <form class="needs-validation" novalidate>
+        <div class="form-group">
+          <label for="name">姓名*</label>
+          <input type="text" class="form-control" id="name" placeholder="請輸入姓名" required>
+          <div class="invalid-feedback">
+            請填寫訂位者姓名
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="tel">電話*</label>
+          <input type="tel" class="form-control" id="tel" placeholder="請輸入連絡電話" required>
+          <div class="invalid-feedback">
+            請填寫連絡電話
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email">Email*</label>
+          <input type="email" class="form-control" id="email" placeholder="請輸入電子信箱" required>
+          <div class="invalid-feedback">
+            請填寫電子信箱
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="people">訂位人數*</label>
+          <input type="number" class="form-control" id="people" placeholder="請輸入訂位人數" required>
+          <div class="invalid-feedback">
+            請填寫訂位人數
+          </div>
+        </div>
+
+        <div class="custom-control custom-radio">
+          <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
+          <label class="custom-control-label" for="customControlValidation2">需要素食</label>
+        </div>
+        <div class="custom-control custom-radio mb-3">
+          <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required>
+          <label class="custom-control-label" for="customControlValidation3">不需要素食</label>
+          <div class="invalid-feedback">請勾選需要 / 不需要</div>
+        </div>
+
+        <div class="d-flex justify-content-end">
+          <button type="button" class="btn btn-secondary mr-2">清除資料</button>
+          <button type="submit" class="btn btn-info">送出</button>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- 更多資訊 -->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6 p-5 bg-cover text-white"
+      style="background-image: url(https://images.unsplash.com/photo-1484834762280-66a18a5a8f0b?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=)">
+      <small>加入我們</small>
+      <h3>你便乖乖的把琴抱進你的床去，你是不認識你父親的</h3>
+      <p>短暫的激情是不值錢的，年代的人還需要摔打，別人一定會聽你，但它只是一環，80年代的人不要跟70年代，別人可以拷貝我的模式，一個成功的創業者，東西得一點點幹，也要注重過程，千萬別告訴別人，賺錢模式越多越說明你沒有模式。
+      </p>
+      <a href="#" class="btn btn-outline-warning">加入我們</a>
+    </div>
+    <div class="col-md-6 p-5 bg-cover text-white"
+      style="background-image: url(https://images.unsplash.com/photo-1476029764343-569b983f5785?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=)">
+      <small>品嚐佳餚</small>
+      <h3>踏著浪，我和世界不一樣，太多堅持</h3>
+      <p>
+        一度剝落了的青春，寂寞的床偌大的房，我和我的倔強不能在shopping時候想你在路上會­遇見怎樣的穹蒼？戀人之間的時光，怎麼又是你，都騎虎難下了，唉呀，環境維護的話，發牢騷之前，打架了，大家不要吵架，我再也不逃了，我們回去了，謝謝，最恐怖的人，既然媽媽決定了，就算是死，辣辣的，一定很好吃。
+      </p>
+      <a href="#" class="btn btn-outline-warning">品嘗佳餚</a>
+    </div>
+  </div>
+</div>
